# ros2_foxy

./: README.md  vincent  vincent.pub
URDF/: frames.gv  my_robot1.urdf
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/my_cpp_pkg/lib/my_cpp_pkg/: add_two_ints_client  add_two_ints_client_no_oop  add_two_ints_server_cpp  cpp_node  hardware_status_publisher_cpp  led_panel_cpp  number_counter_cpp  number_counter_server_cpp  number_publisher_cpp  reset_number_client  robot_news_station  robot_news_station_cpp  smartphone_cpp
install/my_cpp_pkg/share/my_cpp_pkg/: package.sh
install/my_py_pkg/lib/my_py_pkg/: Add_Two_Ints_Server_py  add_two_ints_client_no_oop_py  add_two_ints_server_py  baterry_py  battery_py  hardware_status_publisher_py  led_panel_py  number_counter_py  number_counter_server_py  number_publisher_py  reset_number_count_service  smarphone
install/my_py_pkg/share/my_py_pkg/: package.sh
install/my_robot_bringup/share/my_robot_bringup/: local_setup.sh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_interfaces/share/my_robot_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/turtlesim_catch_them_all/share/turtlesim_catch_them_all/: local_setup.sh  package.sh  package.xml
install/turtlesim_catch_them_all_cpp/lib/turtlesim_catch_them_all_cpp/: controller  controller_cpp  spawner_cpp
install/turtlesim_catch_them_all_cpp/share/turtlesim_catch_them_all_cpp/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/turtlesim_catch_them_all_py/lib/turtlesim_catch_them_all_py/: controller_py  controller_py_PID  spawner_py
install/turtlesim_catch_them_all_py/share/turtlesim_catch_them_all_py/: package.bash  package.dsv  (+3 more)
log/: latest_build
src/my_cpp_pkg/: CMakeLists.txt
src/my_cpp_pkg/src/: add_two_ints_client.cpp  add_two_ints_client_no_oop.cpp  add_two_ints_server.cpp  battery.cpp  hw_status_publisher.cpp  led_panel.cpp  my_first_node.cpp  number_counter.cpp  number_counter_server.cpp  number_publisher.cpp  reset_number_client.cpp  robot_news_station.cpp  smartphone.cpp
src/my_py_pkg/: package.xml  setup.py
src/my_py_pkg/my_py_pkg/: hw_status_publisher.py  my_first_node.py  number_counter_server.py  number_publisher.py  robot_news_station.py  smartphone.py
src/my_robot_bringup/: CMakeLists.txt
src/my_robot_bringup/launch/: number_app.launch.xml  number_app_from_python.launch.xml  turtlesim_app.launch.xml
src/my_robot_description/rviz/: urdf_config.rviz
src/my_robot_description/urdf/: my_robot.urdf.xacro
src/my_robot_interfaces/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all/: CMakeLists.txt
src/turtlesim_catch_them_all_cpp/: CMakeLists.txt  package.xml
src/turtlesim_catch_them_all_cpp/src/: turtle_controller.cpp  turtle_spawner.cpp
src/turtlesim_catch_them_all_py/: package.xml  setup.cfg  setup.py
src/turtlesim_catch_them_all_py/launch/: turtlesim_app.launch.xml
yaml_params/: led_panel_params.yaml  number_params.yaml  robot_new_station_params.yaml
(+159 files in other folders)
